# fraud_detection_system

./: .dockerignore  .gitignore  Dockerfile  MLFLOW_README.md  README.md  README_Docker.md  app.py  deploy_to_ec2.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_mlflow_ui.py  test_api.py  test_enhanced_mlflow.py  test_mlflow.py
.github/workflows/: ci.yml
models/: RandomForest_metadata.joblib  XGBoost_metadata.joblib  XGBoost_model.joblib  training_summary.md
src/: analysis.ipynb  data.dvc
src/modelling/: mlflow_utils.py  model_train.py
src/preprocessing/: handle_imbalance.py  preprocessing.py
tests/: test_schema_and_outputs.py
