[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.63.0",
    "imblearn>=0.0",
    "matplotlib>=3.10.6",
    "mlflow>=2.8.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]
